# machine-learning-foundations

./: .gitignore  README.md  pyproject.toml
src/core/: matrix.py
src/linlag/: matrix.py
src/loss/: losses.py
src/models/: linear_regression.py
tests/: test_matrix.py  test_model.py
