[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-regression-scratch"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pytest==9.0.2",
    "mypy==1.19.1",
    "ruff==0.15.4",
    "tox==4.47.0",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
ignore_missing_imports = true
